modules/ecs/main.tf
resource "aws_cloudwatch_log_group" "app" {
  name              = "/ecs/${var.name}"
  retention_in_days = 7
}

resource "aws_ecs_cluster" "this" {
  name = "${var.name}-cluster"
}

resource "aws_iam_role" "ecs_task_execution" {
  name = "ecs-task-execution-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"

    Statement = [{
      Action = "sts:AssumeRole"
      Effect = "Allow"

      Principal = {
        Service = "ecs-tasks.amazonaws.com"
      }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "ecs_execution" {

  role = aws_iam_role.ecs_task_execution.name

  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

resource "aws_ecs_task_definition" "app" {
  depends_on = [aws_cloudwatch_log_group.app]

  family                   = "${var.name}-task"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]

  cpu    = 512
  memory = 1024

  execution_role_arn = aws_iam_role.ecs_task_execution.arn

  container_definitions = jsonencode([
    {
      name = "app"

      image = "${var.ecr_repository_url}:latest"

      portMappings = [
        {
          containerPort = 3000
        }
      ]

      logConfiguration = {
        logDriver = "awslogs"
        options = {
          awslogs-group         = aws_cloudwatch_log_group.app.name
          awslogs-region        = "us-east-2"
          awslogs-stream-prefix = "ecs"
        }
      }
    }
  ])
}
/*
resource "aws_ecs_task_definition" "app" {

  depends_on = [aws_cloudwatch_log_group.app]

  family                   = "${var.name}-task"

  network_mode             = "awsvpc"

  requires_compatibilities = ["FARGATE"]

  cpu    = 256
  memory = 512

  execution_role_arn = aws_iam_role.ecs_task_execution.arn

  container_definitions = jsonencode([
    {
      name  = "nginx"
      image = "nginx:latest"

      portMappings = [
        {
          containerPort = 80
        }
      ]

      logConfiguration = {
        logDriver = "awslogs"

        options = {
          awslogs-group         = aws_cloudwatch_log_group.app.name
          awslogs-region        = "us-east-2"
          awslogs-stream-prefix = "ecs"
        }
      }
    }
  ])
}
*/

resource "aws_security_group" "ecs" {

  name   = "${var.name}-ecs-sg"
  vpc_id = var.vpc_id


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group_rule" "alb_to_ecs" {

  type      = "ingress"
  from_port = 3000
  to_port   = 3000
  protocol  = "tcp"

  security_group_id        = aws_security_group.ecs.id
  source_security_group_id = var.alb_security_group_id
}
/*
resource "aws_security_group" "ecs" {

  name   = "${var.name}-ecs-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"

    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}
*/

resource "aws_ecs_service" "app" {

  name            = "${var.name}-service"
  cluster         = aws_ecs_cluster.this.id
  task_definition = aws_ecs_task_definition.app.arn

  launch_type                       = "FARGATE"
  desired_count                     = 1
  health_check_grace_period_seconds = 120

  network_configuration {
    subnets         = var.private_subnets
    security_groups = [aws_security_group.ecs.id]

    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = var.target_group_arn
    container_name   = "app"
    container_port   = 3000
  }
}
/*
resource "aws_ecs_service" "app" {

  name            = "${var.name}-service"

  cluster         = aws_ecs_cluster.this.id

  task_definition = aws_ecs_task_definition.app.arn

  launch_type = "FARGATE"

  desired_count = 2

  network_configuration {

    subnets = var.private_subnets

    security_groups = [
      aws_security_group.ecs.id
    ]
    assign_public_ip = true
  }

  load_balancer {

    target_group_arn = var.target_group_arn

    container_name = "nginx"

    container_port = 80
  }
}
*/
